--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,6 @@ test:
 
 deployment:
   quayio:
-    branch: master
+    branch: dev
     commands:
       - docker push quay.io/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:${CIRCLE_SHA1:0:7}
